stop-list for broken metrics
Conflicts:
	lib/librato.js

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   },
   "dependencies": {},
   "devDependencies": {},
-  "main": "lib/librato.js"
+  "main": "lib/librato.js",
+  "scripts": {
+    "test": "nodeunit test"
+  }
 }
