--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "extend": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodeunit": "^0.11.0"
+  },
   "main": "lib/librato.js",
   "scripts": {
     "test": "nodeunit test"
