--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-config-google": "^0.7.1",
+    "eslint-plugin-import": "^2.2.0",
     "nodeunit": "^0.11.0",
     "pre-commit": "^1.2.2"
   },
