--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: ["stable", "7", "6", "5", "4", "0.12"]
+node_js: ["stable", "6", "5", "4", "0.12"]
 before_script:
   - npm install -g nodeunit
 notifications:
