--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
-node_js: ["stable", "6", "5", "4", "0.12"]
+node_js: 
+  - "stable"
+  - "6"
+  - "5"
+  - "4"
+  - "0.12"
+  - "0.10"
+matrix:
+  fast_finish: true
 before_script:
   - npm install -g nodeunit
 notifications:
