--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "main": "lib/librato.js",
   "scripts": {
-    "test": "nodeunit test",
+    "test": "nodeunit",
     "lint": "eslint lib test"
   },
   "pre-commit": [
