--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-import": "^2.2.0",
+    "nock": "^9.0.13",
     "nodeunit": "^0.11.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "sinon": "^2.1.0"
   },
   "main": "lib/librato.js",
   "scripts": {
