--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "extend": "^3.0.0"
   },
   "devDependencies": {
+    "codecov": "^2.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-import": "^2.2.0",
+    "jscoverage": "^0.6.0",
     "nock": "^9.0.13",
     "nodeunit": "^0.11.0",
     "pre-commit": "^1.2.2",
@@ -39,7 +41,8 @@
   "main": "lib/librato.js",
   "scripts": {
     "test": "nodeunit",
-    "lint": "eslint lib test"
+    "lint": "eslint lib test",
+    "ci": "jscoverage lib && yarn test --reporter=lcov && codecov"
   },
   "pre-commit": [
     "lint",
