--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "test": "nodeunit",
     "lint": "eslint lib test",
-    "ci": "jscoverage lib && yarn test --reporter=lcov && codecov"
+    "ci": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov && codecov"
   },
   "pre-commit": [
     "lint",
