--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "pre-commit": "^1.2.2",
     "sinon": "^2.1.0"
   },
-  "main": "lib/librato.js",
+  "main": "index.js",
   "scripts": {
     "test": "nodeunit",
     "lint": "eslint lib test",
-    "ci": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov && codecov -f lib-cov/librato.js"
+    "ci": "jscoverage lib && LIBRATO_COVERAGE=1 nodeunit --reporter=lcov test && codecov"
   },
   "pre-commit": [
     "lint",
