--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,19 @@
 {
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 6
     },
+    "plugins": [
+      "flowtype"
+    ],
     "rules": {
       "one-var-declaration-per-line": "error",
       "quotes": ["error", "single"],
       "no-var": "off",
       "max-len": "warn",
       "guard-for-in": "warn",
-      "eqeqeq": "warn"
+      "eqeqeq": "warn",
+      "flowtype/define-flow-type": 1
     },
     "extends": "google"
 }
